--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "html-webpack-plugin": "2.22.0",
     "http-proxy-agent": "^1.0.0",
     "json-loader": "0.5.4",
-    "node-sass": "^3.8.0",
+    "node-sass": "^4.5.1",
     "opn": "4.0.2",
     "postcss-loader": "0.9.1",
     "promise": "7.1.1",
@@ -43,13 +43,14 @@
     "rimraf": "2.5.4",
     "sass-loader": "^4.0.0",
     "style-loader": "0.13.1",
+    "svg-url-loader": "^2.0.2",
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
-    "bpk-mixins": "^1.2.1",
-    "bpk-stylesheets": "0.0.18",
+    "bpk-mixins": "^11.0.0",
+    "bpk-stylesheets": "^3.2.14",
     "es6-promise": "^3.2.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.15.0",
