--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
-.DS_Store
-Thumbs.db
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
 node_modules
-npm-debug.log
+
+# testing
+coverage
+
+# production
+build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
