--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "private": true,
+  "engines": {
+    "node": "^8.12.0",
+    "npm": "^6.4.1"
+  },
   "name": "full-stack-recruitment-test",
   "version": "1.0.0",
   "description": "Skyscanner full-stack recruitment test.",
