New shortened full stack test for new pilot

--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "server": "(cd ./server && npm start)",
     "pretest": "(cd ./client && npm run lint) && (cd ./server && npm run lint)",
     "test": "(cd ./client && CI=true npm test) && (cd ./server && CI=true npm test)",
-    "start": "echo 'Did you mean `npm run server` or `npm run client`?'"
+    "start": "(cd ./client && npm start &) && (cd ./server && npm start &)"
   }
 }
