--- a/package.json
+++ b/package.json
@@ -8,12 +8,37 @@
   "version": "1.0.0",
   "description": "Skyscanner full-stack recruitment test.",
   "scripts": {
-    "install": "(cd ./client && npm install) && (cd ./server && npm install)",
-    "client": "(cd ./client && npm start)",
-    "build": "(cd ./client && npm run build)",
-    "server": "(cd ./server && npm start)",
-    "pretest": "(cd ./client && npm run lint) && (cd ./server && npm run lint)",
-    "test": "(cd ./client && CI=true npm test) && (cd ./server && CI=true npm test)",
-    "start": "echo 'Did you mean `npm run server` or `npm run client`?'"
-  }
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "CI=true react-scripts test",
+    "lint:scss": "stylelint 'src/**/*.scss' --syntax scss",
+    "lint:scss:fix": "stylefmt --recursive 'src/**/*.scss'",
+    "lint:js": "eslint . --ignore-path ./.gitignore --ext .js,.jsx",
+    "lint:js:fix": "npm run lint:js -- --fix",
+    "lint": "npm run lint:js && npm run lint:scss"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "backpack-react-scripts": "^7.0.0",
+    "bpk-component-text": "^1.0.108",
+    "bpk-mixins": "^17.16.1",
+    "bpk-stylesheets": "^3.2.155",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-skyscanner": "^3.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-test-renderer": "^16.4.2",
+    "stylelint": "^8.4.0",
+    "stylelint-config-skyscanner": "^1.0.1"
+  },
+  "browserslist": [
+    ">0.1%",
+    "not dead",
+    "not ie <= 10",
+    "not op_mini all"
+  ]
 }
