--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-test-renderer": "^16.11.0",
+    "stylefmt": "^6.0.3",
     "stylelint": "^11.1.1",
     "stylelint-config-skyscanner": "^1.0.1"
   },
