--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,12 @@
 {
-  "extends": "skyscanner-with-prettier",
+  "extends": "skyscanner",
   "env": {
     "browser": true,
     "jest": true
   },
   "rules": {
+    "backpack/use-components": "off",
+    "backpack/use-tokens": "off",
     "import/no-extraneous-dependencies": [
       "error",
       {
