--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,11 @@
 language: node_js
 node_js:
-  - lts/carbon
+  - lts/erbium
 env:
   global:
     - NPM_CONFIG_LOGLEVEL=warn
 cache:
   directories:
     - "node_modules"
-branches:
-  only:
-    - master
-    - /^greenkeeper/.*$/
 script:
     - npm test
