--- a/package.json
+++ b/package.json
@@ -15,22 +15,20 @@
     "lint:scss:fix": "stylefmt --recursive 'src/**/*.scss'",
     "lint:js": "eslint . --ignore-path ./.gitignore --ext .js,.jsx",
     "lint:js:fix": "npm run lint:js -- --fix",
-    "lint": "npm run lint:js && npm run lint:scss"
+    "lint": "npm run lint:js && npm run lint:scss",
+    "prettier": "prettier --config .prettierrc --write \"**/*.{js,jsx}\""
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
     "backpack-react-scripts": "^7.0.2",
-    "bpk-component-text": "^2.0.21",
-    "bpk-mixins": "^19.0.21",
-    "bpk-stylesheets": "^4.1.2",
-    "eslint": "^6.6.0",
-    "eslint-config-skyscanner-with-prettier": "^0.8.0",
+    "bpk-component-text": "^3.1.18",
+    "bpk-mixins": "^20.1.0",
+    "bpk-stylesheets": "^6.0.50",
+    "eslint-config-skyscanner": "^7.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-test-renderer": "^16.11.0",
     "stylefmt": "^6.0.3",
-    "stylelint": "^11.1.1",
-    "stylelint-config-skyscanner": "^1.0.1"
+    "stylelint-config-skyscanner": "^2.4.0"
   },
   "browserslist": [
     ">0.1%",
